actual fix for high contrast

--- a/src/assets/css/checkbox.css
+++ b/src/assets/css/checkbox.css
@@ -70,12 +70,3 @@
 .c-cb > input[disabled] ~ label {
 	opacity: .5;
 }
-
-@media screen and (-ms-high-contrast: active) {
-	.c-cb > input:checked ~ label:before {
-		border: 2px solid;
-		box-shadow: none;
-		height: .5em;
-		width: .5em;
-	}
-}
